<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/stat_margin">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top">
        <ImageView
            android:src="@mipmap/main_icon_symbol_foreground"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="center"
            android:background="@color/gold"
            android:contentDescription="@string/app_name" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/stat_margin"
            android:hint="@string/choose_level"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/character_level"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/stat_margin"
                android:padding="@dimen/stat_margin"
                android:hint="@string/choose_level"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/stat_margin"
            android:hint="@string/choose_class"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/character_class"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="@dimen/stat_margin"
            android:padding="@dimen/stat_margin"
            android:hint="@string/choose_class"
            android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/stat_margin"
            android:hint="@string/choose_subclass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/character_subclass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/stat_margin"
                android:padding="@dimen/stat_margin"
                android:hint="@string/choose_subclass"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>