<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="13dp"
    card_view:cardElevation="4dp">
    <LinearLayout
        android:id="@+id/overall_add_participant_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:theme="@style/Theme.DnDAssistant"
        android:background="?attr/cardBackgroundDrawable">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/cardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Card title"
                android:textSize="18sp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/cardImage"
                android:contentDescription="character_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_gravity="start"
                android:src="@mipmap/barokiteer_foreground"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="4dp"
                        android:orientation="vertical"
                        android:gravity="center|bottom"
                        android:background="@drawable/health_icon">
                        <TextView
                            android:id="@+id/currentHealth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gold_bright"
                            android:textSize="16sp"
                            android:text="@string/cur_health"/>
                        <TextView
                            android:id="@+id/healthPool"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gold_bright"
                            android:textSize="12sp"
                            android:text="@string/health_pool"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gold_bright"
                            android:textSize="@dimen/stat_desc_text_size"
                            android:text="@string/hp_caption"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="4dp"
                        android:orientation="vertical"
                        android:gravity="center|bottom"
                        android:background="@drawable/shield_icon">
                        <TextView
                            android:id="@+id/currentShield"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gold_bright"
                            android:textSize="16sp"
                            android:text="@string/cur_health"/>
                        <TextView
                            android:id="@+id/shieldPool"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gold_bright"
                            android:textSize="12sp"
                            android:text="@string/health_pool"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gold_bright"
                            android:textSize="@dimen/stat_desc_text_size"
                            android:text="@string/sh_caption"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="4dp"
                        android:orientation="vertical"
                        android:gravity="center|bottom"
                        android:background="@drawable/armor_icon">
                        <TextView
                            android:id="@+id/currentArmor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gold_bright"
                            android:textSize="16sp"
                            android:text="@string/cur_health"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gold_bright"
                            android:paddingBottom="4dp"
                            android:textSize="@dimen/stat_desc_text_size"
                            android:text="@string/ar_caption"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="4dp"
                        android:orientation="vertical"
                        android:gravity="center|bottom"
                        android:background="@drawable/initiative_icon">
                        <TextView
                            android:id="@+id/currentInitiative"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gold_bright"
                            android:textSize="16sp"
                            android:text="@string/cur_health"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gold_bright"
                            android:paddingBottom="4dp"
                            android:textSize="@dimen/stat_desc_text_size"
                            android:text="@string/in_caption"/>
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp">
                <LinearLayout
                    android:id="@+id/participant_effect_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
