<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.battle.BattleFragment"
    android:background="@color/gold_bright">
    <LinearLayout
        android:id="@+id/overall_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/round_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/frame_margin"
            android:layout_marginTop="@dimen/frame_margin"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/display_round"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/stat_frame"
                android:padding="@dimen/padding"
                android:textAlignment="center"
                android:fontFamily="@font/lucida_calligraphy_italic"
                android:textStyle="bold"
                android:textSize="@dimen/stat_text_size"
                android:text="@string/round_0_caption"/>
            <Button
                android:id="@+id/next_round_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/frame_margin"
                android:textAlignment="center"
                android:fontFamily="@font/lucida_calligraphy_italic"
                android:textStyle="bold"
                android:textSize="@dimen/stat_text_size"
                android:text="@string/next_round_caption"/>
        </LinearLayout>
        <ScrollView
            android:id="@+id/card_container_scroll_menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/card_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/frame_margin"
                android:paddingBottom="8dp"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_effect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/function_icons_margin"
                android:layout_marginBottom="@dimen/floating_button_margin"
                android:layout_marginTop="@dimen/frame_margin"
                android:contentDescription="@string/add_character_button"
                android:clickable="true"
                app:fabCustomSize="36dp"
                app:backgroundTint="@color/void_light"
                app:srcCompat="@drawable/effect_icon" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/heal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/function_icons_margin"
                android:layout_marginBottom="@dimen/floating_button_margin"
                android:layout_marginTop="@dimen/frame_margin"
                android:contentDescription="@string/add_character_button"
                android:clickable="true"
                app:fabCustomSize="36dp"
                app:backgroundTint="@color/void_light"
                app:srcCompat="@drawable/heal_icon" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/deal_damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/function_icons_margin"
                android:layout_marginBottom="@dimen/floating_button_margin"
                android:layout_marginTop="@dimen/frame_margin"
                android:contentDescription="@string/add_character_button"
                android:clickable="true"
                app:fabCustomSize="36dp"
                app:backgroundTint="@color/void_light"
                app:srcCompat="@drawable/damage_icon" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_participant_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/function_icons_margin"
                android:layout_marginBottom="@dimen/floating_button_margin"
                android:layout_marginTop="@dimen/frame_margin"
                android:contentDescription="@string/add_character_button"
                android:clickable="true"
                app:fabCustomSize="36dp"
                app:backgroundTint="@color/void_light"
                app:srcCompat="@drawable/addperson_icon" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/remove_participant_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/function_icons_margin"
                android:layout_marginEnd="@dimen/frame_margin"
                android:layout_marginBottom="@dimen/floating_button_margin"
                android:layout_marginTop="@dimen/frame_margin"
                android:contentDescription="@string/add_character_button"
                android:clickable="true"
                app:fabCustomSize="36dp"
                app:backgroundTint="@color/void_light"
                app:srcCompat="@drawable/removeperson_icon" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>